<resources>
    <string name="app_name">ShoppingList</string>
    <string name="product_name_label">Name:</string>
    <string name="product_name">Product Name</string>
    <string name="product_units">Units</string>
    <string name="product_add_product">Add</string>
    <string name="login_header">Welcome to Listzr</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
</resources>