<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--    <TextView-->
    <!--        android:id="@+id/productNameLabel"-->
    <!--        android:layout_width="58dp"-->
    <!--        android:layout_height="25dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:text="@string/product_name_label"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toLeftOf="@id/productName"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <EditText
        android:id="@+id/productName"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/productUnits"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextView-->
    <!--        android:id="@+id/productUnitsLabel"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:text="@string/product_units"-->
    <!--        app:layout_constraintRight_toLeftOf="@id/productUnits"-->
    <!--        app:layout_constraintLeft_toRightOf="@+id/productName"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->
    <EditText
        android:id="@+id/productUnits"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/product_units"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/productName"
        app:layout_constraintRight_toLeftOf="@id/addProductButton"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/addProductButton"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/product_add_product"
        app:layout_constraintLeft_toRightOf="@id/productUnits"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="@{vm::add}"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productName" />
<!--        tools:listitem="@layout/shopping_item"-->


</androidx.constraintlayout.widget.ConstraintLayout>